--- a/LungLife/lunglife_frontend/src/app/home/home.page.html
+++ b/LungLife/lunglife_frontend/src/app/home/home.page.html
@@ -22,8 +22,14 @@
       </div>
 
       <!-- Action Button -->
-      <div class="action-section">
-        <ion-button (click)="navigateToLogin()" color="primary" shape="round" size="large" expand="block" class="main-action-button">
+      <div class=""><!-- <div class="action-section"> -->
+        <ion-button 
+          expand="block"
+          class="main-action-button"
+          color="primary" 
+          shape="round" 
+          size="large" 
+          (click)="navigateToLogin()">
           Continuar al Login
         </ion-button>
       </div>
