--- a/LungLife/lunglife_frontend/src/app/security/two-fa-settings/two-fa-settings.page.html
+++ b/LungLife/lunglife_frontend/src/app/security/two-fa-settings/two-fa-settings.page.html
@@ -2,7 +2,12 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button fill="clear" (click)="goBack()">
+      <ion-button 
+        fill="clear"
+        shape="round" 
+        size="large"
+        class="main-action-button" 
+        (click)="goBack()">
         <ion-icon name="arrow-back-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -11,7 +16,9 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <div class="security-container">
+  <div class="content-wrapper">
+    <div class="centered-container">
+      <div class="security-container">
 
     @if (currentUser) {
       <!-- 2FA Status Card -->
@@ -41,12 +48,25 @@
       <!-- Action Buttons -->
       <div class="security-actions">
         @if (!currentUser.twoFAEnabled) {
-          <ion-button expand="block" color="primary" (click)="setup2FA()">
+          <ion-button 
+            expand="block" 
+            shape="round" 
+            size="large" 
+            color="primary"
+            class="main-action-button"
+            (click)="setup2FA()">
             <ion-icon name="shield-outline" slot="start"></ion-icon>
             Enable Two-Factor Authentication
           </ion-button>
         } @else {
-          <ion-button expand="block" color="danger" fill="outline" (click)="disable2FA()">
+          <ion-button 
+            expand="block" 
+            shape="round" 
+            size="large"
+            color="danger" 
+            fill="outline"
+            class="main-action-button"
+            (click)="disable2FA()">
             <ion-icon name="shield-off-outline" slot="start"></ion-icon>
             Disable Two-Factor Authentication
           </ion-button>
@@ -109,5 +129,7 @@
       </div>
     }
 
+      </div>
+    </div>
   </div>
 </ion-content>
